--- a/code/app/src/main/res/navigation/nav_home.xml
+++ b/code/app/src/main/res/navigation/nav_home.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.example.theynotlikeus.homeMyMoodsFrag"
+        android:name="com.example.theynotlikeus.HomeMyMoodsFrag"
         android:label="fragment_home_my_moods"
         tools:layout="@layout/fragment_home_my_moods" />
 
