--- a/code/app/src/main/res/layout/activity_admin.xml
+++ b/code/app/src/main/res/layout/activity_admin.xml
@@ -8,7 +8,7 @@
     tools:context=".AdminActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/Textview_AdminActivity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Admin Panel"
