--- a/code/app/src/main/res/layout/fragment_admin_login.xml
+++ b/code/app/src/main/res/layout/fragment_admin_login.xml
@@ -26,7 +26,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textView_AdminLoginFrag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Admin Login Page"
