--- a/code/app/src/main/res/layout/fragment_home_my_moods.xml
+++ b/code/app/src/main/res/layout/fragment_home_my_moods.xml
@@ -9,7 +9,7 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview_fragmenthomemymoods_userrecyclerview"
+        android:id="@+id/recyclerview_FragmentHomeMyMoods_userrecyclerview"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -48,7 +48,7 @@
 
 
         <androidx.appcompat.widget.SearchView
-            android:id="@+id/searchView"
+            android:id="@+id/searchView_FragmentHomeMyMoods"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_marginStart="16dp"
@@ -61,7 +61,7 @@
 
 
         <CheckBox
-            android:id="@+id/checkBox_recentWeek"
+            android:id="@+id/checkBox_FragmentHomeMyMoods_recentWeek"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Recent Week"
@@ -69,7 +69,7 @@
             android:buttonTint="@android:color/white"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/searchView"
+            app:layout_constraintTop_toBottomOf="@id/searchView_FragmentHomeMyMoods"
             app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
