--- a/code/app/src/main/res/layout/fragment_user_login.xml
+++ b/code/app/src/main/res/layout/fragment_user_login.xml
@@ -10,7 +10,7 @@
 
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textView_FragmentUserLogin_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="User Login"
@@ -30,7 +30,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/button_userloginfrag_back"
+            android:id="@+id/button_FragmentUserLogin_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
@@ -40,7 +40,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
-        android:id="@+id/button_UserLogIn_SignIn"
+        android:id="@+id/button_FragmentUserLogin_SignIn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sign In"
@@ -48,7 +48,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/textView_FragmentUserLogin_title"
         app:layout_constraintVertical_bias="0.5" />
 
 
@@ -56,7 +56,7 @@
 
 
     <TextView
-        android:id="@+id/textButton_UserLoginFrag_signUp"
+        android:id="@+id/textButton_FragmentUserLogin_signUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
@@ -64,20 +64,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_FragmentUserLogin_question" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/textView_FragmentUserLogin_question"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Don't Have an account ? "
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_UserLogIn_SignIn" />
+        app:layout_constraintTop_toBottomOf="@+id/button_FragmentUserLogin_SignIn" />
 
     <EditText
-        android:id="@+id/editText_userLoginFrag_username"
+        android:id="@+id/editText_FragmentUserLogin_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -87,10 +87,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_FragmentUserLogin_title" />
 
     <EditText
-        android:id="@+id/editText_userLoginFrag_password"
+        android:id="@+id/editText_FragmentUserLogin_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
@@ -100,7 +100,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText_userLoginFrag_username" />
+        app:layout_constraintTop_toBottomOf="@+id/editText_FragmentUserLogin_username" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
