--- a/code/app/src/main/res/layout/activity_mood_event_details.xml
+++ b/code/app/src/main/res/layout/activity_mood_event_details.xml
@@ -116,37 +116,14 @@
         app:layout_constraintTop_toBottomOf="@+id/imageview_activitymoodeventdetails_moodimage" />
 
     <TextView
-        android:id="@+id/textview_activitymoodeventdetails_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:hint="Date"
-        android:textColorHint="#898888"
-        app:layout_constraintStart_toEndOf="@+id/textview_activitymoodeventdetails_bulletpoint"
-        app:layout_constraintTop_toTopOf="@+id/textview_activitymoodeventdetails_bulletpoint" />
-
-    <TextView
-        android:id="@+id/textview_activitymoodeventdetails_time"
+        android:id="@+id/textview_activitymoodeventdetails_dateandtime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:hint="Time"
+        android:hint="Date and Time"
         android:textColorHint="#898888"
-        app:layout_constraintEnd_toStartOf="@id/textview_activitymoodeventdetails_bulletpoint"
         app:layout_constraintStart_toStartOf="@+id/textview_activitymoodeventdetails_trigger"
         app:layout_constraintTop_toBottomOf="@+id/textview_activitymoodeventdetails_trigger" />
-
-    <TextView
-        android:id="@+id/textview_activitymoodeventdetails_bulletpoint"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="•"
-        android:textColor="#FFFFFF"
-        app:layout_constraintEnd_toStartOf="@id/textview_activitymoodeventdetails_date"
-        app:layout_constraintStart_toEndOf="@+id/textview_activitymoodeventdetails_time"
-        app:layout_constraintTop_toTopOf="@+id/textview_activitymoodeventdetails_time" />
 
     <TextView
         android:id="@+id/textview_activitymoodeventdetails_triggervalue"
@@ -175,7 +152,7 @@
         android:layout_marginTop="8dp"
         android:hint="Location"
         android:textColorHint="#898888"
-        app:layout_constraintStart_toStartOf="@+id/textview_activitymoodeventdetails_time"
-        app:layout_constraintTop_toBottomOf="@+id/textview_activitymoodeventdetails_time" />
+        app:layout_constraintStart_toStartOf="@+id/textview_activitymoodeventdetails_dateandtime"
+        app:layout_constraintTop_toBottomOf="@+id/textview_activitymoodeventdetails_dateandtime" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
