--- a/code/app/src/main/res/layout/fragment_mood_event_layout.xml
+++ b/code/app/src/main/res/layout/fragment_mood_event_layout.xml
@@ -38,10 +38,12 @@
     <TextView
         android:id="@+id/textview_fragmentmoodeventlayout_trigger"
         android:layout_width="180dp"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
+        android:minHeight="30dp"
         android:text="@string/trigger_i_hit_chest_today"
         app:layout_constraintStart_toEndOf="@+id/imageview_fragmentmoodeventlayout_moodicon"
-        app:layout_constraintTop_toBottomOf="@+id/textview_fragmentmoodeventlayout_moodtitle" />
+        app:layout_constraintTop_toBottomOf="@+id/textview_fragmentmoodeventlayout_moodtitle"
+        app:layout_constraintBottom_toTopOf="@id/textview_fragmentmoodeventlayout_socialsituation"/>
 
     <TextView
         android:id="@+id/textview_fragmentmoodeventlayout_socialsituation"
@@ -49,6 +51,7 @@
         android:layout_height="wrap_content"
         android:text="Social Situation"
         android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageview_fragmentmoodeventlayout_moodicon"
         app:layout_constraintTop_toBottomOf="@+id/textview_fragmentmoodeventlayout_trigger" />
 
