--- a/code/app/src/main/res/navigation/nav_home.xml
+++ b/code/app/src/main/res/navigation/nav_home.xml
@@ -13,9 +13,9 @@
 
     <fragment
         android:id="@+id/nav_profile"
-        android:name="com.example.theynotlikeus.FriendRequestFrag"
+        android:name="com.example.theynotlikeus.FollowerRequestFrag"
         android:label="fragment_friend_request"
-        tools:layout="@layout/fragment_friend_request" />
+        tools:layout="@layout/fragment_follower_request" />
 
     <fragment
         android:id="@+id/nav_map"
