UserSignUpFragTest and UserRecyclerViewAdapterTest

--- a/code/app/src/main/res/layout/fragment_user_login.xml
+++ b/code/app/src/main/res/layout/fragment_user_login.xml
@@ -62,6 +62,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
         android:text="Sign Up"
+        android:clickable="true"
+        android:focusable="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
