--- a/code/app/src/main/res/layout/fragment_follower_request.xml
+++ b/code/app/src/main/res/layout/fragment_follower_request.xml
@@ -3,10 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FriendRequestFrag">
+    tools:context=".FollowerRequestFrag">
 
-    <!-- TODO: Update blank fragment layout -->
+
     <TextView
+        android:id='@+id/textView_FollowerRequestFrag'
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="Friend Requests here" />
