--- a/code/app/src/main/res/layout/fragment_home_map.xml
+++ b/code/app/src/main/res/layout/fragment_home_map.xml
@@ -5,8 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".HomeMapFrag">
 
-    <!-- TODO: Update blank fragment layout -->
+
     <TextView
+        android:id='@+id/textView_HomeMapFragment'
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="map fragment here" />
