--- a/code/app/src/main/res/layout/fragment_home_my_moods.xml
+++ b/code/app/src/main/res/layout/fragment_home_my_moods.xml
@@ -9,7 +9,7 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview_fragmenthomemymoods_userrecyclerview"
+        android:id="@+id/recyclerview_HomeMyMoodsFragment_userrecyclerview"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -48,7 +48,7 @@
 
 
         <androidx.appcompat.widget.SearchView
-            android:id="@+id/searchView"
+            android:id="@+id/searchView_HomeMyMoodsFragment"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_marginStart="16dp"
@@ -61,7 +61,7 @@
 
 
         <CheckBox
-            android:id="@+id/checkBox_recentWeek"
+            android:id="@+id/checkBox_HomeMyMoodsFragment_recentWeek"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Recent Week"
@@ -69,7 +69,7 @@
             android:buttonTint="@android:color/white"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/searchView"
+            app:layout_constraintTop_toBottomOf="@id/searchView_HomeMyMoodsFragment"
             app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -84,7 +84,7 @@
         app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
-            android:id="@+id/textView_homeMyMoodFrag_welcomeUser"
+            android:id="@+id/textView_HomeMyMoodsFragment_welcomeUser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
@@ -96,7 +96,7 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/ImageView_homeMyMoodsFrag_userProfile"
+            android:id="@+id/ImageView_HomeMyMoodsFragment_userProfile"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_margin="16dp"
@@ -109,7 +109,7 @@
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton_homeMyMoodsFrag_addmood"
+        android:id="@+id/floatingActionButton_HomeMyMoodsFragment_addmood"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
