--- a/code/app/src/main/res/layout/activity_personal_profile_details.xml
+++ b/code/app/src/main/res/layout/activity_personal_profile_details.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PersonalProfileDetailsActivity">
+    tools:context=".view.PersonalProfileDetailsActivity">
 
 
     <com.google.android.material.appbar.MaterialToolbar
