--- a/code/app/src/main/res/navigation/nav_login.xml
+++ b/code/app/src/main/res/navigation/nav_login.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/loginUserSelectionFrag"
-        android:name="com.example.theynotlikeus.LoginUserSelectionFrag"
+        android:name="com.example.theynotlikeus.view.LoginUserSelectionFrag"
         android:label="Login User Selection"
         tools:layout="@layout/fragment_login_user_selection" >
         <action
@@ -19,7 +19,7 @@
     </fragment>
     <fragment
         android:id="@+id/userLoginFrag"
-        android:name="com.example.theynotlikeus.UserLoginFrag"
+        android:name="com.example.theynotlikeus.view.UserLoginFrag"
         android:label="fragment_user_login"
         tools:layout="@layout/fragment_user_login" >
         <action
@@ -31,7 +31,7 @@
     </fragment>
     <fragment
         android:id="@+id/adminLoginFrag"
-        android:name="com.example.theynotlikeus.AdminLoginFrag"
+        android:name="com.example.theynotlikeus.view.AdminLoginFrag"
         android:label="fragment_admin_login"
         tools:layout="@layout/fragment_admin_login" >
         <action
@@ -40,7 +40,7 @@
     </fragment>
     <fragment
         android:id="@+id/userSignUpFrag"
-        android:name="com.example.theynotlikeus.UserSignUpFrag"
+        android:name="com.example.theynotlikeus.view.UserSignUpFrag"
         android:label="fragment_user_sign_up"
         tools:layout="@layout/fragment_user_sign_up" >
         <action
