--- a/code/app/src/main/res/layout/activity_add_mood_event.xml
+++ b/code/app/src/main/res/layout/activity_add_mood_event.xml
@@ -87,7 +87,7 @@
         android:id="@+id/edittext_ActivityAddMoodEvent_trigger"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:hint="Trigger (Optional)"
+        android:hint="Reason (Optional)"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
@@ -103,6 +103,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner_ActivityAddMoodEvent_socialsituation" />
 
+    <Switch
+        android:id="@+id/switch_ActivityAddMoodEvent_privacy"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:text="Public Mood Entry"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.75"
+        app:layout_constraintStart_toEndOf="@+id/switch_ActivityAddMoodEvent_geolocation"
+        app:layout_constraintTop_toBottomOf="@+id/spinner_ActivityAddMoodEvent_socialsituation" />
+
     <Button
         android:id="@+id/button_ActivityAddMoodEvent_save"
         android:layout_width="wrap_content"
@@ -111,6 +122,8 @@
         android:text="Save"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/switch_ActivityAddMoodEvent_geolocation" />
+
+
 
     <TextView
         android:id="@+id/textView_ActivityAddMoodEvent_selectsocialsituation"
