--- a/code/app/src/main/res/layout/fragment_follower_request.xml
+++ b/code/app/src/main/res/layout/fragment_follower_request.xml
@@ -1,15 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/followerRequestFrag"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".view.FollowerRequestFrag">
 
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/searchView_FollowerRequestFrag"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:background="@color/light_grey"
+        app:layout_constraintTop_toTopOf="@id/followerRequestFrag"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-    <TextView
-        android:id='@+id/textView_FollowerRequestFrag'
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Friend Requests here" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview_FollowerRequestFrag_followerrecyclerview"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchView_FollowerRequestFrag" />
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
