--- a/code/app/src/main/res/layout/fragment_follower_request.xml
+++ b/code/app/src/main/res/layout/fragment_follower_request.xml
@@ -8,17 +8,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".view.FollowerRequestFrag">
 
-    <androidx.appcompat.widget.SearchView
-        android:id="@+id/searchView_FollowerRequestFrag"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:background="@color/light_grey"
-        app:layout_constraintTop_toTopOf="@id/followerRequestFrag"
+    <TextView
+        android:id="@+id/textview_FollowerRequestFrag_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="monospace"
+        android:text="Follow Requests"
+        android:textColor="@color/white"
+        android:textSize="24sp"
+        android:layout_margin="6dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview_FollowerRequestFrag_followerrecyclerview"
@@ -27,6 +28,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchView_FollowerRequestFrag" />
+        app:layout_constraintTop_toBottomOf="@+id/textview_FollowerRequestFrag_title" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
