--- a/code/app/src/main/res/layout/fragment_search_user.xml
+++ b/code/app/src/main/res/layout/fragment_search_user.xml
@@ -19,6 +19,7 @@
         android:id="@+id/recyclerview_SearchUserFrag"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="40dp"
         app:layout_constraintTop_toBottomOf="@id/searchView_SearchUserFrag"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
