--- a/code/app/src/main/res/layout/fragment_user_followed.xml
+++ b/code/app/src/main/res/layout/fragment_user_followed.xml
@@ -33,14 +33,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:text="Follow"
-        android:layout_marginTop="150dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView_UserProfileDetailsFrag_Username"
-        tools:layout_editor_absoluteX="155dp"
-        tools:ignore="MissingConstraints" />
-
+    <!-- RecyclerView for User Moods -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview_UserProfileDetailsFrag_usermoodsrecyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="90dp"
+        app:layout_constraintTop_toBottomOf="@id/textView_UserProfileDetailsFrag_Username"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
