--- a/code/app/src/main/res/layout/fragment_search_user.xml
+++ b/code/app/src/main/res/layout/fragment_search_user.xml
@@ -10,10 +10,11 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_margin="16dp"
+        android:layout_marginTop="36dp"
         android:background="@color/light_grey"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview_SearchUserFrag"
