--- a/code/app/src/main/res/layout/activity_add_mood_event.xml
+++ b/code/app/src/main/res/layout/activity_add_mood_event.xml
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/black_background"
-        android:contentDescription="Select image for mood event"
+        android:contentDescription="@string/select_image_for_mood_event"
         android:src="@drawable/ic_white_back_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -33,7 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="monospace"
-        android:text="Mood Event"
+        android:text="@string/mood_event"
         android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -44,7 +44,7 @@
         android:id="@+id/imageview_mood_photo"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:contentDescription="Mood Image"
+        android:contentDescription="@string/mood_image"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@id/button_select_photo"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,7 +55,7 @@
         android:id="@+id/button_select_photo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Select Photo"
+        android:text="@string/select_photo"
         android:backgroundTint="@color/primary_blue"
         app:layout_constraintBottom_toTopOf="@id/textview_ActivityAddMoodEvent_selectimagetext"
         app:layout_constraintEnd_toEndOf="parent"
@@ -66,7 +66,7 @@
         android:id="@+id/textview_ActivityAddMoodEvent_selectimagetext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Select Image (Optional)"
+        android:text="@string/select_image_optional"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -87,7 +87,7 @@
         android:id="@+id/edittext_ActivityAddMoodEvent_trigger"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:hint="Reason (Optional)"
+        android:hint="@string/reason_optional"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
@@ -119,7 +119,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/primary_blue"
-        android:text="Save"
+        android:text="@string/save"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/switch_ActivityAddMoodEvent_geolocation" />
 
@@ -129,7 +129,7 @@
         android:id="@+id/textView_ActivityAddMoodEvent_selectsocialsituation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Select Social Situation: "
+        android:text="@string/select_social_situation"
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edittext_ActivityAddMoodEvent_trigger" />
