--- a/code/app/src/main/res/layout/activity_mood_event_details.xml
+++ b/code/app/src/main/res/layout/activity_mood_event_details.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:background="@android:color/transparent"
-        android:contentDescription="Go back"
+        android:contentDescription="@string/go_back"
         android:maxWidth="40dp"
         android:maxHeight="40dp"
         android:scaleType="fitXY"
@@ -56,7 +56,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:fontFamily="monospace"
-        android:text="Your Mood Details"
+        android:text="@string/your_mood_details"
         android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@id/imagebutton_ActivityMoodEventDetails_editbutton"
@@ -84,7 +84,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:hint="Username"
+        android:hint="@string/username"
         android:textColor="#FFFFFF"
         android:textColorHint="#898888"
         android:textSize="20sp"
@@ -110,7 +110,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:hint="Social situation"
+        android:hint="@string/social_situation"
         android:textColorHint="#898888"
         app:layout_constraintStart_toStartOf="@+id/imageview_ActivityMoodEventDetails_moodimage"
         app:layout_constraintTop_toBottomOf="@+id/imageview_ActivityMoodEventDetails_moodimage" />
@@ -120,7 +120,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:hint="Date and Time"
+        android:hint="@string/date_and_time"
         android:textColorHint="#898888"
         app:layout_constraintStart_toStartOf="@+id/textview_ActivityMoodEventDetails_trigger"
         app:layout_constraintTop_toBottomOf="@+id/textview_ActivityMoodEventDetails_trigger" />
@@ -130,7 +130,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:hint="trigger value"
+        android:hint="@string/reason_value"
         android:textColorHint="#898888"
         app:layout_constraintStart_toEndOf="@+id/textview_ActivityMoodEventDetails_trigger"
         app:layout_constraintTop_toTopOf="@+id/textview_ActivityMoodEventDetails_trigger" />
@@ -140,7 +140,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Trigger:"
+        android:text="@string/reason"
         android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="@+id/textview_ActivityMoodEventDetails_socialsituation"
         app:layout_constraintTop_toBottomOf="@+id/textview_ActivityMoodEventDetails_socialsituation" />
@@ -150,7 +150,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:hint="Location"
+        android:hint="@string/location"
         android:textColorHint="#898888"
         app:layout_constraintStart_toStartOf="@+id/textview_ActivityMoodEventDetails_dateandtime"
         app:layout_constraintTop_toBottomOf="@+id/textview_ActivityMoodEventDetails_dateandtime" />
