--- a/code/app/src/main/res/layout/fragment_search_user.xml
+++ b/code/app/src/main/res/layout/fragment_search_user.xml
@@ -5,6 +5,19 @@
     android:layout_height="match_parent"
     android:background="@color/black_background">
 
+    <!-- Back Button -->
+    <ImageButton
+        android:id="@+id/button_SearchUserFrag_backbutton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="61dp"
+        android:background="@color/black_background"
+        android:contentDescription="Go back to follower request page"
+        android:src="@drawable/ic_white_back_button"
+        app:layout_constraintBottom_toTopOf="@+id/recyclerview_SearchUserFrag"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.appcompat.widget.SearchView
         android:id="@+id/searchView_SearchUserFrag"
         android:layout_width="0dp"
@@ -13,7 +26,7 @@
         android:layout_marginTop="36dp"
         android:background="@color/light_grey"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button_SearchUserFrag_backbutton"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -21,9 +34,9 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="40dp"
-        app:layout_constraintTop_toBottomOf="@id/searchView_SearchUserFrag"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/searchView_SearchUserFrag" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
