--- a/code/app/src/main/res/layout/fragment_user_followed.xml
+++ b/code/app/src/main/res/layout/fragment_user_followed.xml
@@ -19,6 +19,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/button_user_followed_follow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/primary_blue"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_UserProfileDetailsFrag_Followed_Username" />
+
     <!-- Username at the top, centered and larger -->
     <TextView
         android:id="@+id/textView_UserProfileDetailsFrag_Followed_Username"
@@ -38,10 +47,9 @@
         android:id="@+id/recyclerview_UserProfileDetailsFrag_Followed_usermoodsrecyclerview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="90dp"
-        app:layout_constraintTop_toBottomOf="@id/textView_UserProfileDetailsFrag_Followed_Username"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/button_user_followed_follow" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
